Add drawing and clear screen

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
       <canvas id="canv" width="600" height="600"></canvas>
     </div>
     <label for="fps">FPS</label>
-    <input type="number" id="fps" value="10">
+    <input type="number" id="fps" value="5">
     <label for="size">Size</label>
-    <input type="number" id="size" value="100">
+    <input type="number" id="size" value="50">
     <button type="button" id="playbutton">Pause</button>
     <button type="button" id="resetbutton">Reset</button>
     <button type="button" id="stepbutton">Step</button>
+    <button type="button" id="clearbutton">Clear</button>
+    Living Cell Count: <span id="cellcount">0</span>
   </body>
 </html>
